# herding

./: .gitignore  README.md  ask_user  ask_user.bat  ask_user.js  ask_user.py  ask_user_ui.py  common.js  get-project-info.bat  get-project-info.js  index.ts  package-lock.json  package.json  project.md  request.md  sleepdog.js  test-herding.js  todo.md  tsconfig.json  types.d.ts
.cursor/rules/: SleepDog.mdc  UserReview.mdc
.github/workflows/: build-tauri.yml
.herding_working/: README.md  changelog.md  config.json  project.md  requests.md  rust-setup.md  todo.md  参考代码.js  测试集.md  编译产物展示.md  需求实现走查单.md  验证清单.md
.herding_working/templates/: default-plan.json
.sleepdog/: project.md
.sleepdog/templates/: _todo.md
doc/task/: sleepdog-todo.md
src/: App.vue
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs
src/core/: server.ts  task-matcher.ts
src/tools/: complete-task.ts  definitions.ts  handler.ts  init-herding.ts  project-info.ts  update-info.ts
src/user-interaction/: enhanced-plan.ts  examples.ts  user-ask.ts
templates/: _todo.md
user-interaction-app/: package.json
user-interaction-app/src/: app.js  index.html
user-interaction-app/src-tauri/: Cargo.toml  tauri.conf.json
user-interaction-app/src-tauri/src/: main.rs
